--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "irjs-apps",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Searching Google Play Android Apps",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,23 @@
   ],
   "author": "Khalid Alharbi",
   "license": "MIT",
+  "devDependencies": {
+	  "mocha": "^2.1.0",
+	  "should": "^5.0.0"
+  },
+  "dependencies": {
+    "commander": "^2.6.0",
+	"request": "^2.53.0",
+	"cheerio": "^1.1.1",
+	"through2" : "^0.6.3"
+  },
+  "bin": {
+    "irjs-apps": "./bin/irjs_apps.js"
+  },
+  "files": [
+    "lib",
+    "bin"
+  ],
   "repository" :
   { "type" : "git"
   , "url" : "https://github.com/kalharbi/irjs-apps"
