--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "commander": "^2.6.0",
 	"request": "^2.53.0",
 	"cheerio": "^1.1.1",
-	"through2" : "^0.6.3"
+	"mongodb" : "^1.4.30"
   },
   "bin": {
     "irjs-apps": "./bin/irjs_apps.js"
