--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "author": "Khalid Alharbi",
   "license": "MIT",
   "devDependencies": {
-	  "mocha": "^2.1.0",
-	  "should": "^5.0.0"
+    "mocha": "^2.1.0",
+    "should": "^5.0.0"
   },
   "dependencies": {
+    "cheerio": "^1.1.1",
     "commander": "^2.6.0",
-	"request": "^2.53.0",
-	"cheerio": "^1.1.1",
-	"mongodb" : "^1.4.30"
+    "mongodb": "^1.4.30",
+    "request": "^2.53.0"
   },
   "bin": {
     "irjs-apps": "./bin/irjs_apps.js"
@@ -31,8 +31,8 @@
     "lib",
     "bin"
   ],
-  "repository" :
-  { "type" : "git"
-  , "url" : "https://github.com/kalharbi/irjs-apps"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kalharbi/irjs-apps"
   }
 }
